--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Game">
-   <FrameLayout
-        android:layout_width="match_parent"
-       android:layout_height="match_parent"
 
-        android:id="@+id/gamefram">
+    <FrameLayout
+        android:id="@+id/gamefram"
+        android:layout_width="match_parent"
+        android:onClick="StopOrRun"
+
+        android:layout_height="match_parent">
 
     </FrameLayout>
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
