--- a/app/src/main/res/layout/activity_terms_of__use.xml
+++ b/app/src/main/res/layout/activity_terms_of__use.xml
@@ -27,16 +27,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="352dp"
+        android:layout_width="351dp"
         android:layout_height="320dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="45dp"
-        android:text="sdkjfhskdjfhksjdfhksjdfhksjdfhksjdfhksdjf sdkjfhskdjfh sdfkjhs dfkjsh dkfjhs kdjfh sdkjfh sdfh skdjfh skdjfh skjdfh skjdfh skjdfh "
+        android:text="The game is not meant to offend. Everything is done in a humorous spirit. We apologize in advance if someone feels hurt. Use of user responsibility. Enjoy!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.0" />
