--- a/app/src/main/res/layout/activity_terms_of__use.xml
+++ b/app/src/main/res/layout/activity_terms_of__use.xml
@@ -10,12 +10,12 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="261dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="461dp"
-        android:layout_marginEnd="61dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="62dp"
         android:layout_marginTop="38dp"
+        android:layout_marginEnd="61dp"
+        android:layout_marginBottom="461dp"
         android:text="Terms of Use"
         android:textSize="40sp"
         android:textStyle="bold"
